<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:padding="25dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:orientation="horizontal"
        android:paddingBottom="5dp">
        <EditText
            android:id="@+id/enter_title_film"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_title_film"
            android:textSize="18sp"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/search_film"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </LinearLayout>


    <EditText
        android:id="@+id/enter_year_film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_year_film"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints"
        android:paddingBottom="10dp"/>

    <ImageView
        android:id="@+id/poster_film"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/desc"
        android:padding="15dp"
        android:src="@drawable/ic_baseline_image_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_year_film"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/add_film"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/add"
        android:textSize="15sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poster_film" />

</androidx.constraintlayout.widget.ConstraintLayout>